# std-accumulate-examples

./: .clang-format  .clang-tidy  .gitignore  AverageAccumulator.cpp  AverageAccumulator.h  CMakeLists.txt  LicencePlateFormatter.cpp  LicencePlateFormatter.h  LicensePlateFormatter.cpp  LicensePlateFormatter.h  LongestWordAccumulator.cpp  LongestWordAccumulator.h  README.md  main.cpp
.cache/clangd/index/: main.cpp.1DB6C2E9B4F9DDD7.idx
